# Aptotect

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  demo.md  test_scanner.sh
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/analyzer/: mod.rs
src/patterns/: mod.rs
src/utils/: mod.rs
tests/: test_contract.move
